--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ qtquickcontrols2-opensource-src (5.9.0~rc-1) UNRELEASED; urgency=medium
   [ Dmitry Shachnev ]
   * New upstream release candidate.
   * Bump Qt build-dependencies to 5.9.0.
+  * Update install files for the new release.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 24 May 2017 15:46:18 +0300
 
