--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ qtquickcontrols2-opensource-src (5.9.0~rc-1) UNRELEASED; urgency=medium
   * Update install files for the new release.
   * Add new qml-module-qt-labs-platform binary package.
   * Update the symbols files (all removed symbols were private).
+  * Add a debian/copyright entry for fontello.ttf.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 24 May 2017 15:46:18 +0300
 
