--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,5 @@
-qtquickcontrols2-opensource-src (5.9.0~rc-1) UNRELEASED; urgency=medium
+qtquickcontrols2-opensource-src (5.9.0~rc-1) experimental; urgency=medium
 
-  [ Dmitry Shachnev ]
   * New upstream release candidate.
   * Bump Qt build-dependencies to 5.9.0.
   * Update install files for the new release.
@@ -8,7 +7,7 @@ qtquickcontrols2-opensource-src (5.9.0~rc-1) UNRELEASED; urgency=medium
   * Update the symbols files (all removed symbols were private).
   * Add a debian/copyright entry for fontello.ttf.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 24 May 2017 15:46:18 +0300
+ -- Dmitry Shachnev <mitya57@debian.org>  Thu, 25 May 2017 20:44:54 +0300
 
 qtquickcontrols2-opensource-src (5.7.1-1) unstable; urgency=medium
 
