--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtquickcontrols2-opensource-src (5.9.0-1) UNRELEASED; urgency=medium
+
+  * New upstream final release.
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Fri, 09 Jun 2017 23:14:42 -0500
+
 qtquickcontrols2-opensource-src (5.9.0~rc-1) experimental; urgency=medium
 
   * New upstream release candidate.
