--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ qtquickcontrols2-opensource-src (5.9.1-1) UNRELEASED; urgency=medium
   [ Dmitry Shachnev ]
   * New upstream release.
   * Bump Qt build-dependencies to 5.9.1.
+  * Add build-dependency on qtdeclarative5-dev-tools, to get QML cache
+    files generated.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 02 Jul 2017 20:25:35 +0300
 
