--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ qtquickcontrols2-opensource-src (5.9.1-1) UNRELEASED; urgency=medium
   * Bump Qt build-dependencies to 5.9.1.
   * Add build-dependency on qtdeclarative5-dev-tools, to get QML cache
     files generated.
+  * Bump Standards-Version to 4.0.0, no changes needed.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 02 Jul 2017 20:25:35 +0300
 
