--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,5 @@
-qtquickcontrols2-opensource-src (5.9.1-1) UNRELEASED; urgency=medium
+qtquickcontrols2-opensource-src (5.9.1-1) experimental; urgency=medium
 
-  [ Dmitry Shachnev ]
   * New upstream release.
   * Bump Qt build-dependencies to 5.9.1.
   * Add build-dependency on qtdeclarative5-dev-tools, to get QML cache
@@ -9,7 +8,7 @@ qtquickcontrols2-opensource-src (5.9.1-1) UNRELEASED; urgency=medium
   * Bump Standards-Version to 4.0.0, no changes needed.
   * Add link to the bug because of which we ignore the tests results.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 02 Jul 2017 20:25:35 +0300
+ -- Dmitry Shachnev <mitya57@debian.org>  Sun, 02 Jul 2017 21:49:52 +0300
 
 qtquickcontrols2-opensource-src (5.9.0-1) experimental; urgency=medium
 
