--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+qtquickcontrols2-opensource-src (5.9.1-2) UNRELEASED; urgency=medium
+
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 07 Jul 2017 12:58:15 +0300
+
 qtquickcontrols2-opensource-src (5.9.1-1) experimental; urgency=medium
 
   * New upstream release.
