--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtquickcontrols2-opensource-src (5.9.1-3) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 16 Aug 2017 15:02:33 -0300
+
 qtquickcontrols2-opensource-src (5.9.1-2) experimental; urgency=medium
 
   * Simplify .install files to fix build failure on architectures where
