--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
-qtquickcontrols2-opensource-src (5.9.1-3) UNRELEASED; urgency=medium
+qtquickcontrols2-opensource-src (5.9.1-3) unstable; urgency=medium
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 16 Aug 2017 15:02:33 -0300
+  * Release to unstable.
+
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 16 Aug 2017 15:04:10 -0300
 
 qtquickcontrols2-opensource-src (5.9.1-2) experimental; urgency=medium
 
