--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+qtquickcontrols2-opensource-src (5.9.2-1) UNRELEASED; urgency=medium
+
+  [ Dmitry Shachnev ]
+  * New upstream release.
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 16 Oct 2017 11:11:42 +0300
+
 qtquickcontrols2-opensource-src (5.9.1-3) unstable; urgency=medium
 
   * Release to unstable.
