--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ qtquickcontrols2-opensource-src (5.9.2-1) UNRELEASED; urgency=medium
   [ Dmitry Shachnev ]
   * New upstream release.
   * Bump Qt build-dependencies to 5.9.2.
+  * Use dh_qmlcdeps to get proper dependencies for .qmlc files.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 16 Oct 2017 11:11:42 +0300
 
