--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtquickcontrols2-opensource-src (5.9.3-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Sat, 09 Dec 2017 16:06:20 -0600
+
 qtquickcontrols2-opensource-src (5.9.2-2) unstable; urgency=medium
 
   * Upload to unstable.
