--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-qtquickcontrols2-opensource-src (5.9.3-0ubuntu1) UNRELEASED; urgency=medium
+qtquickcontrols2-opensource-src (5.9.3-0ubuntu1) bionic; urgency=medium
 
   * New upstream release.
   * Update symbols from build logs.
 
- -- Simon Quigley <tsimonq2@ubuntu.com>  Sat, 09 Dec 2017 16:06:20 -0600
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Sat, 09 Dec 2017 17:54:20 -0600
 
 qtquickcontrols2-opensource-src (5.9.2-2) unstable; urgency=medium
 
